2408 CJK character width handled incorrectly in terminal emulators 3019 localedef(1) manpage is pretty out of date Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Lauri Tirkkonen <lotheac@iki.fi> Reviewed by: Andy Stormont <andyjstormont@gmail.com> Approved by: Gordon Ross <gordon.ross@nexenta.com>